Fixed display overflow; Keyboard support to be added.

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 #frame {
-    width: 400px;
+    width: 380px;
     height: 500px;
     background-color: #333333;
     position: absolute;
